add_library(locic-semanalysis Analysis.cpp CanCast.cpp ConvertClassDef.cpp ConvertFunctionDecl.cpp ConvertFunctionDef.cpp ConvertNamespace.cpp ConvertScope.cpp ConvertStatement.cpp ConvertType.cpp ConvertValue.cpp
	Context/LocalContext.cpp Context/NamespaceContext.cpp Context/RootContext.cpp Context/TypeInstanceContext.cpp)

